// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content component, content not note 1`] = `
<styled.div>
  foo
</styled.div>
`;

exports[`Content component, showEnharmonics: true 1`] = `
<styled.div>
  <NoteContent
    note="F#2"
    noteType="pitch"
    showEnharmonics={true}
  />
</styled.div>
`;

exports[`Content component, snapshot 1`] = `
<styled.div>
  <NoteContent
    note="E2"
    noteType="pitch"
    showEnharmonics={false}
  />
</styled.div>
`;
